Second revision, results

--- a/paper/markdown/hyposmia_biblio.bib
+++ b/paper/markdown/hyposmia_biblio.bib
@@ -1,3 +1,201 @@
+@article{Lawton2016,
+abstract = {Background Impaired olfaction is an important feature in Parkinson's disease (PD) and other neurological diseases. A variety of smell identification tests exist such as “Sniffin' Sticks” and the University of Pennsylvania Smell Identification Test (UPSIT). An important part of research is being able to replicate findings or combining studies in a meta-analysis. This is difficult if olfaction has been measured using different metrics. We present conversion methods between the: UPSIT, Sniffin' 16, and Brief-SIT (B-SIT); and Sniffin' 12 and Sniffin' 16 odour identification tests. Methods We used two incident cohorts of patients with PD who were tested with either the Sniffin' 16 (n = 1131) or UPSIT (n = 980) and a validation dataset of 128 individuals who took both tests. We used the equipercentile and Item Response Theory (IRT) methods to equate the olfaction scales. Results The equipercentile conversion suggested some bias between UPSIT and Sniffin' 16 tests across the two groups. The IRT method shows very good characteristics between the true and converted Sniffin' 16 (delta mean = 0.14, median = 0) based on UPSIT. The equipercentile conversion between the Sniffin' 12 and 16 item worked well (delta mean = 0.01, median = 0). The UPSIT to B-SIT conversion showed evidence of bias but amongst PD cases worked well (mean delta = −0.08, median = 0). Conclusion We have demonstrated that one can convert UPSIT to B-SIT or Sniffin' 16, and Sniffin' 12 to 16 scores in a valid way. This can facilitate direct comparison between tests aiding future collaborative analyses and evidence synthesis.},
+author = {Lawton, Michael and Hu, Michele T.M. and Baig, Fahd and Ruffmann, Claudio and Barron, Eilidh and Swallow, Diane M.A. and Malek, Naveed and Grosset, Katherine A. and Bajaj, Nin and Barker, Roger A. and Williams, Nigel and Burn, David J. and Foltynie, Thomas and Morris, Huw R. and Wood, Nicholas W. and May, Margaret T. and Grosset, Donald G. and Ben-Shlomo, Yoav},
+doi = {10.1016/J.PARKRELDIS.2016.09.023},
+issn = {1353-8020},
+journal = {Parkinsonism & Related Disorders},
+keywords = {Equating,Item Response Theory,Olfaction,Sniffin' Sticks,University of Pennsylvania Smell Identification Test},
+month = {dec},
+pages = {96--101},
+pmid = {27729202},
+publisher = {Elsevier},
+title = {{Equating scores of the University of Pennsylvania Smell Identification Test and Sniffin' Sticks test in patients with Parkinson's disease}},
+volume = {33},
+year = {2016}
+}
+@article{Kanavou2021,
+abstract = {Objectives: Hyposmia is a common feature of Parkinson's disease (PD), yet there is no standard method to define it. A comparison of four published methods was performed to explore and highlight differences. Materials and methods: Olfactory testing was performed in 2097 cases of early PD in two prospective studies. Olfaction was assessed using various cut-offs, usually corrected by age and/or gender. Control data were simulated based on the age and gender structure of the PD cases and published normal ranges. Association with age, gender, and disease duration was explored by method and study cohort. Prevalence of hyposmia was compared with the age and gender-matched simulated controls. Between method agreement was measured using Cohen's kappa and Gwet's AC1. Results: Hyposmia was present in between 69.1% and 97.9% of cases in Tracking Parkinson's cases, and between 62.2% and 90.8% of cases in the Parkinson's Progression Marker Initiative, depending on the method. Between-method agreement varied (kappa 0.09–0.80, AC1 0.55–0.86). The absolute difference between PD cases and simulated controls was similar for men and women across methods. Age and male gender were positively associated with hyposmia (p <.001, all methods). Odds of having hyposmia increased with advancing age (OR:1.06, 95% CI:1.03, 1.10, p <.001). Longer disease duration had a negative impact on overall olfactory performance. Conclusions: Different definitions of hyposmia give different results using the same dataset. A standardized definition of hyposmia in PD is required, adjusting for age and gender, to account for the background decline in olfactory performance with ageing, especially in men.},
+author = {Kanavou, Sofia and Pitz, Vanessa and Lawton, Michael A. and Malek, Naveed and Grosset, Katherine A. and Morris, Huw R. and Ben-Shlomo, Yoav and Grosset, Donald G.},
+doi = {10.1002/BRB3.2258},
+issn = {21623279},
+journal = {Brain and Behavior},
+keywords = {Parkinson's disease,cut-off,diagnosis,hyposmia,olfactory impairment},
+month = {aug},
+number = {8},
+pmid = {34190430},
+publisher = {Wiley-Blackwell},
+title = {{Comparison between four published definitions of hyposmia in Parkinson's disease}},
+url = {/pmc/articles/PMC8413742/ /pmc/articles/PMC8413742/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8413742/},
+volume = {11},
+year = {2021}
+}
+@article{Hugh2015,
+abstract = {Background: Detection of olfactory dysfunction is important for fire and food safety. Clinical tests of olfaction have been developed for adults but their use in children has been limited because they were felt to be unreliable in children under six years of age. We therefore administered two olfactory tests to children and compared results across tests. Methods: Two olfactory tests (Sniffin' Sticks and University of Pennsylvania Smell Identification Test (UPSIT)) were administered to 78 healthy children ages 3 to 12 years. Children were randomized to one of two groups: Group 1 performed the UPSIT first and Sniffin' Sticks second, and Group 2 performed Sniffin' Sticks first and UPSIT second. Results: All children were able to complete both olfactory tests. Performance on both tests was similar for children 5 and 6 years of age. There was an age-dependent increase in score on both tests (p < .01). Children performed better on the Sniffin' Sticks than the UPSIT (65.3% versus 59.7%, p < .01). There was no difference in performance due to order of test presentation. Conclusions: The Sniffin' Sticks and UPSIT olfactory tests can both be completed by children as young as 5 years of age. Performance on both tests increased with increasing age. Better performance on the Sniffin' Sticks than the UPSIT may be due to a decreased number of test items, better ability to maintain attention, or decreased olfactory fatigue. The ability to reuse Sniffin ' Sticks on multiple children may make it more practical for clinical use.},
+author = {Hugh, Sarah C. and Siu, Jennifer and Hummel, Thomas and Forte, Vito and Campisi, Paolo and Papsin, Blake C. and Propst, Evan J.},
+doi = {10.1186/S40463-015-0061-Y},
+issn = {1916-0216},
+journal = {Journal of otolaryngology - head & neck surgery = Le Journal d'oto-rhino-laryngologie et de chirurgie cervico-faciale},
+keywords = {Child,Comparative Study,Evan J Propst,Female,Humans,Jennifer Siu,MEDLINE,Male,Mass Screening*,NCBI,NIH,NLM,National Center for Biotechnology Information,National Institutes of Health,National Library of Medicine,Odorants,Olfaction Disorders / diagnosis*,PMC4359791,Predictive Value of Tests,Preschool,PubMed Abstract,Sarah C Hugh,Sensory Thresholds*,doi:10.1186/s40463-015-0061-y,pmid:25890082},
+month = {mar},
+number = {1},
+pmid = {25890082},
+publisher = {J Otolaryngol Head Neck Surg},
+title = {{Olfactory testing in children using objective tools: comparison of Sniffin' Sticks and University of Pennsylvania Smell Identification Test (UPSIT)}},
+url = {https://pubmed.ncbi.nlm.nih.gov/25890082/},
+volume = {44},
+year = {2015}
+}
+@article{Mai2023,
+abstract = {Background: A precise and reliable test of the olfactory function is indispensable for the diagnosis of the olfactory disorder (OD). Despite of this, in a clinical context, often there is no place in daily routine for time-consuming procedures. This study aimed to examine if the assessment of olfactory function using the “Sniffin' Sticks” is suitable for self-assessment. Methods: Participants comprised 84 healthy control subjects (HC) and 37 OD patients. The “Sniffin' Sticks” test battery consisting of odor threshold (T), discrimination (D) and identification (I) tests was used for self- and assisted assessments. To save time, we applied the 8-item wide step version of the T test and the 8-item D test, whereas the I task remained the same as the original version. The whole test included two sessions, with each session comprising a self-assessment part performed by the participants themselves, and an assisted-assessment part performed by the examiner. Results: Sniffin' Sticks self-assessment was efficient in distinguishing between self-reported HC subjects and OD patients (p's < 0.01), and the scores did not differ significantly from the assisted-assessment (p's > 0.05). In the self-administered I and TDI tests, there was a moderate to excellent test–retest reliability (ICC = 0.51–0.93, p's < 0.01), and a strong to excellent correlation with the assisted assessment (r = 0.71–0.92, p's < 0.01). However, the self-administered T and D tests only exhibited low to moderate test–retest reliability (ICC = 0.30–0.72, p's < 0.05) and correlations with the assisted test (r = 0.31–0.62, p's < 0.05). Conclusions: The Identification self-test is appropriate to be solely applied, and is therefore an easy-to-use alternative for olfactory screening in a larger segment of patients. The whole “Sniffin' Sticks” self-test also shows good measurement properties and is therefore a suitable backup in clinical practice, but improvement is needed due to the simplified D and T self-test.},
+author = {Mai, Yiling and Klockow, Marie and Haehner, Antje and Hummel, Thomas},
+doi = {10.1007/S00405-023-07872-7/FIGURES/3},
+issn = {14344726},
+journal = {European Archives of Oto-Rhino-Laryngology},
+keywords = {Olfactory dysfunction,Self-assessment,Self-test,Sniffin' Sticks,Test–retest reliability},
+month = {aug},
+number = {8},
+pages = {3673--3685},
+pmid = {36799976},
+publisher = {Springer Science and Business Media Deutschland GmbH},
+title = {{Self-assessment of olfactory function using the “Sniffin' Sticks”}},
+url = {https://link.springer.com/article/10.1007/s00405-023-07872-7},
+volume = {280},
+year = {2023}
+}
+@article{Oleszkiewicz2019a,
+abstract = {Purpose: To provide up-to-date and detailed normative data based on a large-scale sample, increasing diagnostic validity by reference to narrow age groups as previous normative values were based upon smaller sample sizes—especially in the group of older subjects. Method: Data were obtained from 9139 healthy subjects (4928 females aged 5–96 years and 4211 males aged 5–91 years). The standard “Sniffin' Sticks” test was applied, comprising threshold (T), discrimination (D) and identification (I) subtests, and yielding a TDI sum score. Results: Hyposmia was established at a TDI score of less than 30.75. Age-related changes were found in each domain, most pronounced for thresholds. Individuals aged 20–30 years performed best, whereas children below the age of 10 and adults above the age of 71 scored only half as well. Sex-related differences were in favor of women. Conclusions: Data provide guidance for assessing individual olfactory performance in relation to specific age groups. Significant gender and age effects were observed, with a most pronounced increase of olfactory test scores between age 5 through 20 years and a dramatic decrease at the age of 60 through 71 years.},
+author = {Oleszkiewicz, A. and Schriever, V. A. and Croy, I. and H{\"{a}}hner, A. and Hummel, Thomas},
+doi = {10.1007/S00405-018-5248-1/TABLES/2},
+issn = {14344726},
+journal = {European Archives of Oto-Rhino-Laryngology},
+keywords = {Discrimination,Identification,Normative data,Olfaction,Sniffin' Sticks,Threshold},
+month = {mar},
+number = {3},
+pages = {719--728},
+pmid = {30554358},
+publisher = {Springer Verlag},
+title = {{Updated Sniffin' Sticks normative data based on an extended sample of 9139 subjects}},
+url = {https://link.springer.com/article/10.1007/s00405-018-5248-1},
+volume = {276},
+year = {2019}
+}
+@article{Hummel2007a,
+abstract = {"Sniffin' Sticks" is a test of nasal chemosensory function that is based on pen-like odor dispensing devices, introduced some 10 years ago by Kobal and co-workers. It consists of tests for odor threshold, discrimination, and identification. Previous work established its test-retest reliability and validity. Results of the test are presented as "TDI score", the sum of results obtained for threshold, discrimination, and identification measures. While normative data have been established they are based on a relatively small number of subjects, especially with regard to subjects older than 55 years where data from only 30 healthy subjects have been used. The present study aimed to remedy this situation. Now data are available from 3,282 subjects as compared to data from 738 subjects published previously. Disregarding sex-related differences, the TDI score at the tenth percentile was 24.9 in subjects younger than 15 years, 30.3 for ages from 16 to 35 years, 27.3 for ages from 36 to 55 years, and 19.6 for subjects older than 55 years. Because the tenth percentile has been defined to separate hyposmia from normosmia, these data can be used as a guide to estimate individual olfactory ability in relation to subject's age. Absolute hyposmia was defined as the tenth percentile score of 16-35 year old subjects. Other than previous reports the present norms are also sex-differentiated with women outperforming men in the three olfactory tests. Further, the present data suggest specific changes of individual olfactory functions in relation to age, with odor thresholds declining most dramatically compared to odor discrimination and odor identification. {\textcopyright} 2006 Springer-Verlag.},
+author = {Hummel, T. and Kobal, G. and Gudziol, H. and Mackay-Sim, A.},
+doi = {10.1007/S00405-006-0173-0/METRICS},
+issn = {09374477},
+journal = {European Archives of Oto-Rhino-Laryngology},
+keywords = {Discrimination,Identification,Olfaction,Smell,Threshold},
+month = {mar},
+number = {3},
+pages = {237--243},
+pmid = {17021776},
+publisher = {Springer},
+title = {{Normative data for the "Sniffin' Sticks" including tests of odor identification, odor discrimination, and olfactory thresholds: An upgrade based on a group of more than 3,000 subjects}},
+url = {https://link.springer.com/article/10.1007/s00405-006-0173-0},
+volume = {264},
+year = {2007}
+}
+@article{Hummel1997,
+abstract = {'Sniffin' Sticks' is a new test of nasal chemosensory performance based on pen-like odor dispensing devices. It comprises three tests of olfactory function, namely tests for odor threshold (n-butanol, testing by means of a single staircase), odor discrimination (16 pairs of odorants, triple forced choice) and odor identification (16 common odorants, multiple forced choice from four verbal items per test odorant). After extensive preliminary investigations the tests were applied to a group of 104 healthy volunteers (52 female, 52 male, mean age 49.5 years, range 18-84 years) in order to establish test-retest reliability and to compare them with an established measure of olfactory performance (the Connecticut Chemosensory Clinical Research Center Test, CCCRC). Performance decreased with increasing age of the subjects (P < 0.001). Coefficients of correlation between sessions 1 and 2 were 0.61 for thresholds, 0.54 for discrimination and 0.73 for identification. Butanol thresholds as obtained with the CCCRC increased as a function of age; this relation to the subjects' age was not found for the CCCRC odor identification task. The test-retest reliability for CCCRC thresholds was 0.36, for odor identification it was 0.60. It is concluded that 'Sniffin' Sticks'-may be suited for the routine clinical assessment of olfactory performance.},
+author = {Hummel, T. and Sekinger, B. and Wolf, S. R. and Pauli, E. and Kobal, G.},
+doi = {10.1093/CHEMSE/22.1.39},
+issn = {0379-864X},
+journal = {Chemical senses},
+keywords = {Adult,Age Factors,Aged,B Sekinger,Factor Analysis,Female,Fruit,G Kobal,Humans,MEDLINE,Male,Middle Aged,NCBI,NIH,NLM,National Center for Biotechnology Information,National Institutes of Health,National Library of Medicine,Odorants*,PubMed Abstract,Smell / physiology*,Statistical,Statistics as Topic,T Hummel,doi:10.1093/chemse/22.1.39,pmid:9056084},
+month = {feb},
+number = {1},
+pages = {39--52},
+pmid = {9056084},
+publisher = {Chem Senses},
+title = {{'Sniffin' sticks': olfactory performance assessed by the combined testing of odor identification, odor discrimination and olfactory threshold}},
+url = {https://pubmed.ncbi.nlm.nih.gov/9056084/},
+volume = {22},
+year = {1997}
+}
+@article{Kobal1996,
+abstract = {'Sniffin' Sticks' is a new test of nasal chemosensory performance based on pen-like odour-dispensing devices. This portable test is suited for repetitive, inexpensive screening of odour identification. The test includes a forced odour-identification task for seven odours performed by means of a list of four items (multiple-choice). In 146 subjects the basic screening test was compared to a down-scaled version of the UPSIT (CC-SIT). Sniffin' Sticks exhibited a relatively higher coefficient of correlation with the subjects' age; they also demonstrated the women's superior olfactory sensitivity more pronounced when compared to men. In addition, the coefficient of correlation between age and olfactory performance was slightly higher when the sticks were used. Preliminary investigations in nine patients with impaired olfactory function (i.e., anosmic or hyposmic patients) revealed significantly lower scores in patients compared to healthy controls matched for age and sex (p < 0.001). It is concluded that Sniffin' Sticks may be useful in the routine clinical assessment of olfactory performance where both time and costs matter.},
+author = {Kobal, G. and Hummel, T. and Sekinger, B. and Barz, S. and Roscher, S. and Wolf, S.},
+issn = {0300-0729},
+journal = {Rhinology},
+keywords = {Europe PMC,Europe PubMed Central,ORCIDs,REST APIs,abstracts,bioinformatics,biological patents,biomedical journals,biomedical research,citation networks,citation search,clinical guidelines,full text,journal articles,life sciences,literature search,open access,research articles,text mining},
+month = {dec},
+number = {4},
+pages = {222--226},
+pmid = {9050101},
+title = {{"Sniffin' sticks": screening of olfactory performance.}},
+url = {https://europepmc.org/article/med/9050101},
+volume = {34},
+year = {1996}
+}
+@article{Doty2007,
+abstract = {Background: Despite the importance of the sense of smell for establishing the flavor of foods and beverages, as well as protecting against environmental dangers, this primary sensory system is commonly ignored by the rhinologist. Methods: In this article basic issues related to practical measurement of olfactory function in the clinic are described and examples of the application of the two most common paradigms for such measurement - odor identification and detection-are presented. A listing is made of the 27 olfactory tests currently used clinically, along with their strengths and weaknesses. A brief review of common nasosinus-related disorders for which quantitative olfactory testing has been performed is provided. Results: Although many psychophysical tests are available for quantifying olfactory loss, it is apparent that a number are limited in terms of practicality, sensitivity, and reliability. In general, sensitivity and reliability are positively correlated with test length. Given the strengths of the more reliable forced-choice pyschophysical tests and the limitations of electrophysiological tests, the common distinction between "subjective" and "objective" tests is misleading and should not be used. Complete recovery of olfactory function, as measured quantitatively, rarely follows surgical or medical interventions in patients with rhinosinusitis. Conclusion: Given the availability of practical clinical olfactory tests, the modern rhinologist can easily quantify cranial nerve (CN) I function. The application of such tests has led to a new understanding of the effects of nasal disease on olfactory function. Except in cases of total or near-total nasal obstruction, olfactory and airway patency measures usually are unrelated, in accord with the concept that rhinosinusitis vrimarilu influences olfactory function bu apovtotic pathological changes within the olfactory neuroevithelium. Copyright {\textcopyright} 2007, OceanSide Publications, Inc.},
+author = {Doty, Richard L.},
+doi = {10.2500/ajr.2007.21.3043},
+issn = {10506586},
+journal = {American Journal of Rhinology},
+keywords = {Allergy,Iatrogenesis,Measurement,Nasal disease,Olfaction,Polyposis,Psychophysics,Rhinology,Rhinosinusitis,Smell,UPSIT},
+month = {jul},
+number = {4},
+pages = {460--473},
+pmid = {17882917},
+publisher = {SAGE PublicationsSage CA: Los Angeles, CA},
+title = {{Office procedures for quantitative assessment of olfactory function}},
+url = {https://journals.sagepub.com/doi/10.2500/ajr.2007.21.3043},
+volume = {21},
+year = {2007}
+}
+@article{Doty1984,
+abstract = {Smell identification ability was measured in 1955 persons ranging in age from 5 to 99 years. On the average, women outperformed men at all ages, and nonsmokers outperformed smokers. Peak performanc...},
+author = {Doty, Richard L. and Shaman, Paul and Applebaum, Steven L. and Giberson, Ronita and Siksorski, Lenore and Rosenberg, Lysa},
+doi = {10.1126/SCIENCE.6505700},
+issn = {00368075},
+journal = {Science},
+month = {dec},
+number = {4681},
+pages = {1441--1443},
+pmid = {6505700},
+publisher = {
+        American Association for the Advancement of Science
+      },
+title = {{Smell Identification Ability: Changes with Age}},
+url = {https://www.science.org/doi/10.1126/science.6505700},
+volume = {226},
+year = {1984}
+}
+@article{Doty1984a,
+abstract = {The development of the first standardized "scratch'n sniff" olfactory test is described. Over 1600 subjects participated in five experiments. In Experiment 1, 50 microencapsulated odorants were rated as to their intensity, pleasantness, irritation, coolness, and familiarity, and two procedures for releasing them were compared. In Experiment 2, the results of the first experiment and familiarity, and two procedures for releasing them were compared. In Experiment 2, the results of the first experiment and other data were used in the development of the test, which was administered to a large number of subjects. Using multiple regression analysis, scores on this test were shown to be significantly related to the subjects' gender, ethnic background, and smoking behavior. Average test scores decreased as a function of age, with the greatest decline occurring between the sixth and tenth decades of life. These age-related changes were not correlated with scores on the Wechsler Memory Scale. Women performed better than men within all age categories. In Experiment 3, the test was shown to differentiate between subjects with known olfactory disorders (e.g., Kallmann's syndrome; Korsakoff s syndrome) and normal controls, and to reliably detect persons instructed to feign total anosmia. In Experiment 4, the test-retest reliability was established (6-month interval; r=0.918, p<0.001), and in Experiment 5 the test was shown to correlate thresholds with odor detection (r=-0.794, p<0.001). This self-administratered test now makes it possible to rapidly and accurately assess general olfactory function in the laboratory, clinic, or through the mail without complex equipment or space-consuming stores of chemicals. {\textcopyright} 1984.},
+author = {Doty, Richard L. and Shaman, Paul and Dann, Michael},
+doi = {10.1016/0031-9384(84)90269-5},
+issn = {0031-9384},
+journal = {Physiology & Behavior},
+keywords = {Aging,Anosmia,Hyposmia,Kallmann's syndrome,Korsakoff s syndrome,Malingering,Memory,Microencapsulation,Multiple sclerosis,Olfaction,Olfactory threshold,Psychophysics,Sex differences,Smoking,Suprathreshold scaling},
+month = {mar},
+number = {3},
+pages = {489--502},
+pmid = {6463130},
+publisher = {Elsevier},
+title = {{Development of the university of pennsylvania smell identification test: A standardized microencapsulated test of olfactory function}},
+volume = {32},
+year = {1984}
+}
+@article{Doty1989,
+abstract = {The internal consistency reliability (ICR) of the 40-item University of Pennsylvania Smell Identification Test (UPSIT) and its 10-, 20-, and 30-item fractions was explored, as well as the relationships between the fractions and the entire 40-item test. Pearson correlation coefficients (rs) were computed among all independent combinations and permutations of the four 10-item UPSIT booklets using data from 774 subjects. The median r values of the 10- and 20-item combinations were used to establish the ICRs of the 10- and 20-item tests. The ICRs of the 30- and 40-item tests were estimated using the Spearman-Brown formula and the median rs of the 20-item combinations. Additional ICR estimates of the 40-item UPSIT were obtained from nonsymmetrical fractions using the Horst formula. The ICRs for the UPSIT and its 10-, 20-, and 30-item fractions were 0.922, 0.752, 0.855 and 0.898, respectively. No major sex differences emerged. Estimates of correlations between (1) single booklets and two-booklet combinations and (2) the 40-item UPSIT using Guilford's (1953) correction for nonindependence ranged from 0.812 to 0.871. Overall, these results indicate that (1) the UPSIT and its 10-, 20-, and 30-item fragments have very high ICRs and (2) individual UPSIT booklets or their combinations can be used to assess smell function in a reliable manner where extreme time constraints are present (e.g., in surveys and in brief neuropsychological test batteries). {\textcopyright} 1989 Psychonomic Society, Inc.},
+author = {Doty, Richard L. and Frye, Richard E. and Agrawal, Udayan},
+doi = {10.3758/BF03210709/METRICS},
+issn = {00315117},
+journal = {Perception & Psychophysics},
+keywords = {Cognitive Psychology},
+month = {sep},
+number = {5},
+pages = {381--384},
+pmid = {2726398},
+publisher = {Springer},
+title = {{Internal consistency reliability of the fractionated and whole University of Pennsylvania Smell Identification Test}},
+url = {https://link.springer.com/article/10.3758/BF03210709},
+volume = {45},
+year = {1989}
+}
 @article{Pichler2023,
 abstract = { Renal cell carcinoma (RCC) is frequently infiltrated by immune cells, a process which is governed by chemokines. CD8 +  T cells in the RCC tumor microenvironment (TME) may be exhausted which most likely influence therapy response and survival. The aim of this study was to evaluate chemokine-driven T cell recruitment, T cell exhaustion in the RCC TME, as well as metabolic processes leading to their functional anergy in RCC. Eight publicly available bulk RCC transcriptome collectives (n=1819) and a single cell RNAseq dataset (n=12) were analyzed. Immunodeconvolution, semi-supervised clustering, gene set variation analysis and Monte Carlo-based modeling of metabolic reaction activity were employed. Among 28 chemokine genes available, CXCL9/10/11/CXCR3, CXCL13/CXCR5 and XCL1/XCR1 mRNA expression were significantly increased in RCC compared to normal kidney tissue and also strongly associated with tumor-infiltrating effector memory and central memory CD8 + T cells in all investigated collectives. M1 TAMs, T cells, NK cells as well as tumor cells were identified as the major sources of these chemokines, whereas T cells, B cells and dendritic cells were found to predominantly express the cognate receptors. The cluster of RCCs characterized by high chemokine expression and high CD8 + T cell infiltration displayed a strong activation of IFN/JAK/STAT signaling with elevated expression of multiple T cell exhaustion-associated transcripts. Chemokine high RCCs were characterized by metabolic reprogramming, in particular by downregulated OXPHOS and increased IDO1-mediated tryptophan degradation. None of the investigated chemokine genes was significantly associated with survival or response to immunotherapy. We propose a chemokine network that mediates CD8 + T cell recruitment and identify T cell exhaustion, altered energy metabolism and high IDO1 activity as key mechanisms of their suppression. Concomitant targeting of exhaustion pathways and metabolism may pose an effective approach to RCC therapy. },
 author = {Pichler, Renate and Siska, Peter J. and Tymoszuk, Piotr and Martowicz, Agnieszka and Untergasser, Gerold and Mayr, Roman and Weber, Florian and Seeber, Andreas and Kocher, Florian and Barth, Dominik A. and Pichler, Martin and Thurnher, Martin},
@@ -69,7 +267,7 @@ author = {Serlin, Ronald C. and Carr, John and Marascuilo, Leonard A.},
 doi = {10.1037/0033-2909.92.3.786},
 issn = {00332909},
 journal = {Psychological Bulletin},
-keywords = {correlation ratio by R. Fisher, measure of association for nonparametric procedures},
+keywords = {correlation ratio by R. Fisher, measure of associa},
 month = {nov},
 number = {3},
 pages = {786--790},
